[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/UI/EndGame.gd" type="Script" id=1]
[ext_resource path="res://Assets/Style/Pixellari_style.tres" type="Theme" id=3]
[ext_resource path="res://Assets/WinBg.png" type="Texture" id=4]
[ext_resource path="res://Assets/Style/inter_small.tres" type="Theme" id=5]

[node name="DefenceHelp" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 7

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -425.0
margin_top = -277.0
margin_right = 425.0
margin_bottom = 277.0
color = Color( 0, 0, 0, 0.470588 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -424.5
margin_top = -275.0
margin_right = 424.5
margin_bottom = 275.0
theme = ExtResource( 5 )
custom_constants/separation = 30

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 849.0
margin_bottom = 127.0
theme = ExtResource( 3 )
text = "All enemy mycelium 
was defeated"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 157.0
margin_right = 849.0
margin_bottom = 193.0
custom_constants/separation = 41
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 313.0
margin_right = 427.0
margin_bottom = 36.0
text = "K_MODE"

[node name="ModeName" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 468.0
margin_right = 535.0
margin_bottom = 36.0
text = "Easy"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 223.0
margin_right = 849.0
margin_bottom = 259.0
custom_constants/separation = 41
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 312.0
margin_right = 413.0
margin_bottom = 36.0
text = "K_TIME"

[node name="MatchTimer" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 454.0
margin_right = 536.0
margin_bottom = 36.0
text = "00:00"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 289.0
margin_right = 849.0
margin_bottom = 325.0
custom_constants/separation = 41
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 321.0
margin_right = 435.0
margin_bottom = 36.0
text = "K_BUILT"

[node name="Mushrooms" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 476.0
margin_right = 527.0
margin_bottom = 36.0
text = "100"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 336.0
margin_right = 849.0
margin_bottom = 367.0
custom_constants/separation = 41
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_left = 270.0
margin_right = 487.0
margin_bottom = 31.0
text = "K_M_LOST"
align = 1

[node name="MushroomsLost" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_left = 528.0
margin_right = 579.0
margin_bottom = 31.0
text = "100"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 355.0
margin_right = 849.0
margin_bottom = 391.0
custom_constants/separation = 41
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5"]
margin_left = 312.0
margin_right = 445.0
margin_bottom = 36.0
text = "K_M_GOT"
align = 1

[node name="MineralsMine" type="Label" parent="VBoxContainer/HBoxContainer5"]
margin_left = 486.0
margin_right = 537.0
margin_bottom = 36.0
text = "100"

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 421.0
margin_right = 849.0
margin_bottom = 457.0
custom_constants/separation = 41
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer6"]
margin_left = 296.0
margin_right = 461.0
margin_bottom = 36.0
text = "K_M_SPENT"
align = 1

[node name="MineralsSpend" type="Label" parent="VBoxContainer/HBoxContainer6"]
margin_left = 502.0
margin_right = 553.0
margin_bottom = 36.0
text = "100"

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 487.0
margin_right = 849.0
margin_bottom = 523.0
custom_colors/font_color = Color( 1, 1, 1, 0.392157 )
text = "K_PAB"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -100.0
margin_right = 188.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
